Finished chapter on Fusion Education and made a summary. Almost Done!!

--- a/first_author_papers.bib
+++ b/first_author_papers.bib
@@ -1,12 +1,12 @@
 
 @phdthesis{Hillairet2007a,
-  title = {Applications Du Formalisme Des Faisceaux Gaussiens {\`a} La Mod{\'e}lisation de l'interaction d'une Onde {\'E}lectromagn{\'e}tique Avec Un Objet {{3D}} Complexe},
+  title = {Applications Du Formalisme Des Faisceaux Gaussiens \`a La Mod\'elisation de l'interaction d'une Onde \'Electromagn\'etique Avec Un Objet {{3D}} Complexe},
   author = {Hillairet, Julien},
   year = {2007},
   url = {http://thesesups.ups-tlse.fr/111/},
   copyright = {All rights reserved},
   file = {C\:\\Users\\JH218595\\Zotero\\storage\\G8576QHI\\Hillairet - 2007 - Applications du formalisme des faisceaux gaussiens.pdf},
-  school = {Universit{\'e} de Toulouse III - Paul Sabatier}
+  school = {Universit\'e de Toulouse III - Paul Sabatier}
 }
 
 @article{hillairet2008,
