--- a/tex/chap_RF_fundamentals.tex
+++ b/tex/chap_RF_fundamentals.tex
@@ -14,8 +14,8 @@ We will review the fundamentals of transmission line theory (Section~\ref{sec:tr
 % #####################################################
 % #####################################################
 % #####################################################
-\section{Uniform Transmission lines Properties}\label{sec:transmission_line}
-\marginnote[*-2]{Part of this section are taken from the documentation of the open-source Python package \href{http://scikit-rf.org/}{scikit-rf} which is maintained by the author and used in RF circuit models, for example in \citeauthyear{hillairet2015-2} or in \citeauthyear{hillairet2019-1}.}
+\section[Uniform Transmission Lines]{Uniform Transmission lines Properties}\label{sec:transmission_line}
+\marginnote[*-2]{Parts of this Section are taken from the documentation of the open-source Python package \href{http://scikit-rf.org/}{scikit-rf} which is maintained by the author and used in RF circuit models, for example in \citeauthyear{hillairet2015-2} or in \citeauthyear{hillairet2019-1}.}
 
 Once RF waves have been generated, it must be transmitted to the antennas, using suitable transmission line depending on the RF frequency and power level. The main results and properties of uniform transmission lines are reviewed in this section. The results given here are well-known and can be found in numerous textbooks such as \sidecite{Harrington2001, marcuvitz1951, Thourel1988, Collin1990, gonzalez1997, pozar2012, Orfanidis, steer2019-3} to give a personal selection.
 
