--- a/tex/chap_high_power_icrf.tex
+++ b/tex/chap_high_power_icrf.tex
@@ -223,7 +223,7 @@ A two-stage quarter-wavelength and water cooled impedance transformer is connect
 % ###################################################
 % ###################################################
 \subsection{WEST ICRH Antenna Modelling}\label{sec:WEST_ICRH_antenna_modelling}
-\marginnote{Parts of this section are taken from \citeauthyear{hillairet2019-1}}
+\marginnote{Parts of this section are taken from \citeauthyear{hillairet2019-1}.}
 In this section, we illustrate the complete RF modelling the WEST Ion Cyclotron Resonance Heating (ICRH) antenna. The complete antenna circuit is made by connecting the various elements that compose it, separately full-wave modelled from the final CAD model of the antenna or using equivalent lumped models. 
 
 Such approach is not new \textit{per se} since it was done during the WEST ICRH antenna design with commercial software such as ANSYS Designer in \sidecite{hillairet2015-2} and was also done with proprietary codes (i.e. owned by the person or the firm who has developed it) in \sidecite{durodie2015, helou2015-2}. However, the author firmly believes in the advantages Open Source software in Science, as when these tools are not open-sourced, it leads to an obvious reproducibility problem as one should only rely on authors claims. To conform to the necessity of reproducibility in science,  software sources used in physical and engineering researches should ideally be made open when possible \sidecite{ince2012}. The case of RF network manipulation and analysis is no different. Thus, this section illustrates some functionalities of the open source Python package \texttt{scikit-rf} co-developed by the author and used by hundred (thousands?) of users in the world\marginnote{At the time of the writing of this manuscript (April 2020), the \texttt{scikit-rf} package has been download more then 50000 times since January 2017 using the Anaconda Python package manager (but this include multiple downloads/user). The number of download of the package on github is of the order of 20 to 50 per 15 days. The mailing list has 124 registered users.}. This section is accompanied by a set of  \href{https://doi.org/10.5281/zenodo.2668370}{online Jupyter notebooks} illustrating in more details the code leading to the results presented here.
