--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -1,14 +1,20 @@
 \setchapterstyle{kao}
 %\setchapterpreamble[u]{\margintoc}
-\chapter{Summary}
-\labch{intro}
+\chapter*{Summary}
+%\labch{intro}
 
-Magnetic confinement fusion researches is the most advanced technique to master nuclear fusion for energy production. One of the main requirements for achieving fusion is to heat the plasma particles to temperatures exceeding 100-200 million of degrees (10-20 keV). Electromagnetic waves in mega-watt range of power, from tens of MHz to hundreds of GHz, are launched by antennas located near the plasma periphery in order to increase the plasma temperature and extend its duration \sidecite{Cairns1991}. 
+Magnetic confinement fusion researches is the most advanced technique to master nuclear fusion for energy production. One of the main requirements for achieving fusion is to heat the plasma particles to temperatures exceeding 100-200 million of degrees (10-20 keV). Electromagnetic waves in mega-watt range of power, from tens of MHz to hundreds of GHz, are launched by antennas located near the plasma periphery in order to increase the plasma temperature and extend its duration. However, designing and using multi-megawatts RF systems is not trivial and leads to many issues, which for some of them  are relatively little addressed in the literature. 
 
+This manuscript describes part of my work performed at CEA/IRFM since 2008 as RF research scientist. The Chapter 1 is an introduction to the controlled nuclear fusion and the need for Heating and Current Drive systems in Tokamaks. The main elements of the RF systems used in current experimental devices are identified in this chapter. 
 
+The Chapter 2 recalls the theoretical elements of the electromagnetic theory which are necessary for the daily work of a RF engineer working in RF Heating and Current Drive systems for tokamaks. 
 
+The Chapter 3 describes my work on the coupling of RF waves from antennas to tokamak plasmas. After in introduction to waves in plasma, in particular in the Ion Cyclotron and Lower Hybrid range of frequencies, the subsection of this chapter detail the LH coupling code ALOHA and some examples of its use on Tore Supra experiments. The last part of this chapter is dedicated to the use of full-wave software for the coupling calculations.
 
-Part of my work is not described in thus manuscript, like some analysis concerning RF plasma cleaning in the frame of the ITER Wide-Angle Visible (WAVS) diagnostic, my work as WEST Engineer-in-Charge (\href{https://github.com/IRFM/PPPAT/}{https://github.com/IRFM/PPPAT/}) and a rapid excursion in the Electron Cyclotron world (\cite{farthouat2010}). 
+The Chapters 4 and 5 described my work for the design and tests of high power devices for RF heating and current drive in tokamaks. Chapter 4 is dedicated to Ion Cyclotron Range of Frequency (ICRF). It concerns my work on the WEST ICRF antennas design and modelling which has started in 2013. Another important topic of this chapter concerns the R\&D performed on the ITER ICRF system, specifically on RF contacts. The Chapter 5 addresses the design and tests of RF devices for the LHRF from 2010 to 2014, which concerns in particular components for the then foreseen ITER LHCD system.
 
+The Chapter 6 introduces the work mostly performed by PhD student concerning RF breakdowns and in particular the multipactor effect. This work has been made in collaboration with CNES and ONERA since 2014.
 
-Some figures in this manuscript, like Figure~\ref{fig:chap1:reactivity} and Figure~\ref{fig:chap1:nTtau_machines} have been made in the frame on an \href{https://github.com/alfkoehn/fusion_plots/}{open-source project} created in collaboration with Alf Koehn from University of Stuttgart, which purpose is to reproduce classic figures used in Fusion Textbooks using open-source codes and data.
+Finally, the Chapter 7 describes parallel teaching and outreaching activities performed at CEA/IRFM, on the topic of the "Fusion Education". It concerns young students. This chapter also addresses my work on open-source software developments, in particular on the Python package scikit-rf. 
+
+This manuscript does not cover some of my work at CEA/IRFM performed since 2008, such as on RF plasma cleaning in the frame of the ITER Wide-Angle Visible (WAVS) diagnostic or my work as WEST Engineer-in-Charge (the \href{https://github.com/IRFM/PPPAT/}{PPPAT software}), neither a rapid excursion in the Electron Cyclotron world (\sidecite{farthouat2010}).
